--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Elison Michell">
     <title>Maratona Explorer</title>
 
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg">
 </head>
 <body>
